# open2internet

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  README.md  after_build.bat  appveyor.yml  build_win.sh
src/: main.rs  rust_ui.rs  style.rs.bkp  ui.rs  ui.rs.bkp
src/pages/: index.html
src/pages/css/: font-awesome.min.css  skeleton_dark.css
src/utils/: mod.rs
