[package]
name = "open2internet"
version = "0.1.0"
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
port_scanner = "0.1.5"
# glib = "0.9.3"
igd = "0.11.1"
get_if_addrs = "0.5.3"
serde = {version="1.0.112", features=["derive"]}
serde_json = "1.0.55"
# iced = "0.1.0-beta"
# iced = "0.1.0-alpha"
# iced = {git="https://github.com/hecrj/iced"}
web-view = "0.6.3"
# tokio = { version = "0.2", features = ["full"] }