[package]
name = "open2internet"
version = "0.1.0"
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
edition = "2018"

[dependencies]
port_scanner = "^0.1"
igd = "^0.11"
get_if_addrs = "^0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
web-view = "^0.6"
minecraft_client = { git = "https://gitlab.mglolenstine.xyz/MGlolenstine/minecraft_client" }
