[package]
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
edition = "2018"
name = "open2internet"
version = "0.1.0"

[dependencies]
futures = "0.3.12"
futures-util = "0.3.12"
get_if_addrs = "^0.5"
igd = "0.12"
netstat = "0.7.0"
port_scanner = "^0.1"
public-ip = "0.1.1"
rayon = "1.5.0"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "1.2.0", features = ["full"]}
tokio-stream = "0.1.3"
web-view = "0.7.2"
# minecraft_client = { git = "https://gitlab.mglolenstine.xyz/MGlolenstine/minecraft_client" }
